{
  "version": 4,
  "terraform_version": "1.14.4",
  "serial": 418,
  "lineage": "ee38b931-9b7b-b614-6f29-c19a702338a9",
  "resources": [
    {
      "module": "module.my_infrastructure",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:917714657832:internet-gateway/igw-0e89ff692b90d9404",
            "id": "igw-0e89ff692b90d9404",
            "owner_id": "917714657832",
            "region": "us-east-1",
            "tags": {
              "Name": "CPU-stress-igw"
            },
            "tags_all": {
              "Name": "CPU-stress-igw"
            },
            "vpc_id": "vpc-07214bb42439411fc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.my_infrastructure.aws_vpc.CPU_stress_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_infrastructure",
      "mode": "managed",
      "type": "aws_lb",
      "name": "CPU_stress_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:917714657832:loadbalancer/app/CPU-stress-lb/b5af8f13387de8a4",
            "arn_suffix": "app/CPU-stress-lb/b5af8f13387de8a4",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "CPU-stress-lb-922856843.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:917714657832:loadbalancer/app/CPU-stress-lb/b5af8f13387de8a4",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "CPU-stress-lb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-00e0120a19538943b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-020cddbfe3bd72750"
              },
              {
                "subnet_id": "subnet-0fe2f84012d7f07e7"
              }
            ],
            "subnets": [
              "subnet-020cddbfe3bd72750",
              "subnet-0fe2f84012d7f07e7"
            ],
            "tags": {
              "Name": "CPU-stress-alb"
            },
            "tags_all": {
              "Name": "CPU-stress-alb"
            },
            "vpc_id": "vpc-07214bb42439411fc",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:917714657832:loadbalancer/app/CPU-stress-lb/b5af8f13387de8a4"
          },
          "dependencies": [
            "module.my_infrastructure.aws_security_group.CPU_stress_sg",
            "module.my_infrastructure.aws_subnet.CPU_stress_Subnet",
            "module.my_infrastructure.aws_subnet.CPU_stress_Subnet_2",
            "module.my_infrastructure.aws_vpc.CPU_stress_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_infrastructure",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nlb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:917714657832:listener/app/CPU-stress-lb/b5af8f13387de8a4/69dafb16253d0a67",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:917714657832:targetgroup/CPU-stress-tg/141ab9869fdcf302",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:917714657832:listener/app/CPU-stress-lb/b5af8f13387de8a4/69dafb16253d0a67",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:917714657832:loadbalancer/app/CPU-stress-lb/b5af8f13387de8a4",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:917714657832:listener/app/CPU-stress-lb/b5af8f13387de8a4/69dafb16253d0a67"
          },
          "dependencies": [
            "module.my_infrastructure.aws_lb.CPU_stress_lb",
            "module.my_infrastructure.aws_lb_target_group.CPU_stress_tg",
            "module.my_infrastructure.aws_security_group.CPU_stress_sg",
            "module.my_infrastructure.aws_subnet.CPU_stress_Subnet",
            "module.my_infrastructure.aws_subnet.CPU_stress_Subnet_2",
            "module.my_infrastructure.aws_vpc.CPU_stress_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_infrastructure",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "CPU_stress_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:917714657832:targetgroup/CPU-stress-tg/141ab9869fdcf302",
            "arn_suffix": "targetgroup/CPU-stress-tg/141ab9869fdcf302",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:917714657832:targetgroup/CPU-stress-tg/141ab9869fdcf302",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "CPU-stress-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-07214bb42439411fc"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:917714657832:targetgroup/CPU-stress-tg/141ab9869fdcf302"
          },
          "dependencies": [
            "module.my_infrastructure.aws_vpc.CPU_stress_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_infrastructure",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_Public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:917714657832:route-table/rtb-06f4b15937d45356c",
            "id": "rtb-06f4b15937d45356c",
            "owner_id": "917714657832",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e89ff692b90d9404",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "CPU-stress-rt"
            },
            "tags_all": {
              "Name": "CPU-stress-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-07214bb42439411fc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "917714657832",
            "id": "rtb-06f4b15937d45356c",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.my_infrastructure.aws_internet_gateway.gw",
            "module.my_infrastructure.aws_vpc.CPU_stress_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_infrastructure",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "con_Public_rt_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d06fb17e167b39ec",
            "region": "us-east-1",
            "route_table_id": "rtb-06f4b15937d45356c",
            "subnet_id": "subnet-0fe2f84012d7f07e7"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "917714657832",
            "id": "rtbassoc-0d06fb17e167b39ec",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.my_infrastructure.aws_internet_gateway.gw",
            "module.my_infrastructure.aws_route_table.rt_Public",
            "module.my_infrastructure.aws_subnet.CPU_stress_Subnet",
            "module.my_infrastructure.aws_vpc.CPU_stress_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_infrastructure",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "con_Public_rt_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e06b4c2bd766f532",
            "region": "us-east-1",
            "route_table_id": "rtb-06f4b15937d45356c",
            "subnet_id": "subnet-020cddbfe3bd72750"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "917714657832",
            "id": "rtbassoc-0e06b4c2bd766f532",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.my_infrastructure.aws_internet_gateway.gw",
            "module.my_infrastructure.aws_route_table.rt_Public",
            "module.my_infrastructure.aws_subnet.CPU_stress_Subnet_2",
            "module.my_infrastructure.aws_vpc.CPU_stress_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_infrastructure",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "CPU_stress_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:917714657832:security-group/sg-00e0120a19538943b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00e0120a19538943b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "CPU_stress_sg",
            "name_prefix": "",
            "owner_id": "917714657832",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07214bb42439411fc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "917714657832",
            "id": "sg-00e0120a19538943b",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.my_infrastructure.aws_vpc.CPU_stress_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_infrastructure",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "CPU_stress_Subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:917714657832:subnet/subnet-0fe2f84012d7f07e7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fe2f84012d7f07e7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "917714657832",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "CPU-stress-Subnet-1"
            },
            "tags_all": {
              "Name": "CPU-stress-Subnet-1"
            },
            "vpc_id": "vpc-07214bb42439411fc"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "917714657832",
            "id": "subnet-0fe2f84012d7f07e7",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.my_infrastructure.aws_vpc.CPU_stress_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_infrastructure",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "CPU_stress_Subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:917714657832:subnet/subnet-020cddbfe3bd72750",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-020cddbfe3bd72750",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "917714657832",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "CPU-stress-Subnet-2"
            },
            "tags_all": {
              "Name": "CPU-stress-Subnet-2"
            },
            "vpc_id": "vpc-07214bb42439411fc"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "917714657832",
            "id": "subnet-020cddbfe3bd72750",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.my_infrastructure.aws_vpc.CPU_stress_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_infrastructure",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "CPU_stress_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:917714657832:vpc/vpc-07214bb42439411fc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-009f03f1e40b9b348",
            "default_route_table_id": "rtb-0d92fd2977f4cd813",
            "default_security_group_id": "sg-0c1e059196204b5eb",
            "dhcp_options_id": "dopt-0dbaca2bf127159cd",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07214bb42439411fc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d92fd2977f4cd813",
            "owner_id": "917714657832",
            "region": "us-east-1",
            "tags": {
              "Name": "CPU_stress_vpc"
            },
            "tags_all": {
              "Name": "CPU_stress_vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "917714657832",
            "id": "vpc-07214bb42439411fc",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}